force-app/main/default/objects/Logik_Leads__c/Logik_Leads__c.object-meta.xml
<CustomObject>
    <label>Logik Lead</label>
    <nameField>
        <label>Logik Leads Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logik Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>