force-app/main/default/objects/Logik_Leads__c/fields/Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_URL__c</fullName>
    <description>The Field to store the URL of the Documentation.</description>
    <label>Document URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>