force-app/main/default/objects/Logik_Leads__c/fields/Lead_Logik__c.field-meta.xml
<CustomField>
    <fullName>Lead_Logik__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Logik</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Logik Leads</relationshipLabel>
    <relationshipName>Logik_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>