force-app/main/default/objects/Logik_Leads__c/fields/Logik_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Logik_Lead_ID__c</fullName>
    <description>The Field to store the information of Lead ID</description>
    <label>Logik Lead ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>