force-app/main/default/objects/Logik_Leads__c/fields/Logs_of_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Logs_of_Eligibility__c</fullName>
    <description>The Field to store the Logs of Rules that god passed or failed.</description>
    <label>Logs of Eligibility</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>