force-app/main/default/objects/Logik_Leads__c/fields/Plans_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Plans_Eligible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Eligible Plans of the Lender for this Lead</description>
    <label>Plans Eligible</label>
    <referenceTo>Plans__c</referenceTo>
    <relationshipLabel>Logik Leads</relationshipLabel>
    <relationshipName>Logik_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>